--- a/jarkom.html
+++ b/jarkom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas Jaringan Komputer - [Nama Kamu]</title>
+    <title>Tugas Jaringan Komputer z</title>
     <link rel="stylesheet" href="jarkom.css">
 </head>
 <body>
@@ -44,7 +44,7 @@ Sederhananya, router bertugas seperti "petugas lalu lintas data" di dunia jaring
         <section class="download-section">
             <h3>Lampiran Tutorial Hosting</h3>
             <p>Klik tombol di bawah ini untuk melihat atau mengunduh langkah-langkah lengkap pendaftaran hosting.</p>
-            <a href="tutorial-hosting.pdf" class="btn-download" target="_blank">Download Tutorial (PDF)</a>
+            <a href="607012500023_Zahrah Tsabitah Zikra_49-02_TUBES JARKOM copy.pdf" class="btn-download" target="_blank">Download Tutorial (PDF)</a>
         </section>
     </div>
 
